feat(00003): Basic Navigation Skeleton